[gd_scene load_steps=4 format=3 uid="uid://cud61htxj6j3q"]

[ext_resource type="Script" path="res://clases/bullet.gd" id="1_fb2ur"]
[ext_resource type="Script" path="res://clases/hitbox.gd" id="2_d1h6d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ji5vc"]
size = Vector2(10, 6)

[node name="PlayerBullet" type="Node2D"]
script = ExtResource("1_fb2ur")

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(1, 0.466667, 0.513726, 1)
polygon = PackedVector2Array(0, 3, 0, -3, 10, -3, 10, 3)

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
monitoring = false
script = ExtResource("2_d1h6d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(5, 0)
shape = SubResource("RectangleShape2D_ji5vc")

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
